--- a/projects.html
+++ b/projects.html
@@ -62,5 +62,13 @@
         </ul>
         </div>
     </section>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5PN9E9W6G7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5PN9E9W6G7');
+</script>
 </body>
 </html>
