--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
         </ul>
         </div>
     </section>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5PN9E9W6G7"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-5PN9E9W6G7');
-</script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WWJEZQWSKP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-WWJEZQWSKP');
+    </script>
 </body>
 </html>
