--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,7 @@
             <li>
                 <a href="mailto:rmsivasankar@protonmail.com" target="_blank" rel="noopener noreferrer">
                 <img src="icons/socialmedia/email.png" alt="Email logo">
+                <!-- bWF2ZXJpY2tzCg== -->
                 <p>Mail</p></a>
             </li>
             <li>
