--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h2 class="work"><span class="auto-type"></span></h2>
                 <p class="ceh">Certified Ethical Hacker (CEH-PRACTICAL)</p>
                 <p class="about">Hey there! I'm Sivasankar, a passionate cyber security student on a mission to secure the digital world. From dissecting malware to crafting robust defenses, I thrive on the front lines of cyber defense. Eager to transform my knowledge into real-world solutions. Let's connect and explore the limitless possibilities of cyber security together. 💻🛡️</p>
-                <a href="assets/Minimalist CV Resume-1.pdf" target="_blank"><button class="cv">DOWNLOAD CV</button></a>
+                <a href="assets/R M Sivasankar Resume.pdf" target="_blank"><button class="cv">DOWNLOAD CV</button></a>
             </div>
             <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
             <script>
